added line breaks and notes to part of New Hampshire

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -5,18 +5,15 @@ title: Storymap
 
 <div class="container-fluid">
     <div class="storymap-main">
-<h1 class="page-header">NEW HAMPSHIRE, A POEM WITH NOTES AND GRACE NOTES</h1>
+<h1 class="page-header"><span data-place="newhampshire">NEW HAMPSHIRE, A POEM WITH NOTES AND GRACE NOTES</span></h1>
                 <h2>Robert Frost</h2>
 
-            <section data-place="newhampshire">
-                <p>This is a storymap!</p>
-            </section>
-
             <section>
-                <h2>NEW HAMPSHIRE</h2>
-                <p><span data-place="south">I met a lady from the South who said (You won't believe she said it, but she said it): "None of my family ever worked, or had A thing to sell."</span> I don't suppose the work Much matters. You may work for all of me. I've seen the time I've had to work myself. The having anything to sell (1) is what Is the disgrace in man or state or nation.</p>
-                <p>I met a Californian who would Talk California — a state so blessed, He said, in climate none had ever died there A natural death, and Vigilance Committees Had had to organize to stock the graveyards And vindicate the state's humanity. "Just the way Steffanson runs on," I murmured, "About the British Arctic. That's what comes Of being in the market with a climate."</p>
-                <p>1 Cf. page 37, <a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000888807;view=1up;seq=51" target="axehelve">"The Axe-helve."</a></p>
+                <h2><a href="#noteAA">NEW HAMPSHIRE</a></h2>
+                <p><span data-place="south">I met a lady from the South who said </br>(You won't believe she said it, but she said it): </br>"None of my family ever worked, or had </br>A thing to sell." I don't suppose the work </br>Much matters. You may work for all of me. </br>I've seen the time I've had to work myself. </br>The <a href="#noteA">having anything to sell</a> is what </br>Is the disgrace in man or state or nation.</span></p>
+                <p><span data-place="arkansas">I met a traveller from Arkansas </br>Who boasted of his state as beautiful </br>For diamonds and apples. "Diamonds </br>And apples in commercial quantities?" </br>I asked him, on my guard. "Oh yes," he answered, </br>Off his. The time was evening in the Pullman. </br>"I see the porter's made your bed," I told him.</span></p>
+                <p><span data-place="california">I met a Californian who would </br>Talk California — a state so blessed, </br>He said, in climate none had ever died there </br>A natural death, and Vigilance Committees </br>Had had to organize to stock the graveyards </br>And vindicate the state's humanity. </span></br><span data-place="britisharctic">"Just the way Steffanson runs on," I murmured, </br>"About the British Arctic. That's what comes </br>Of being in the market with a climate."</span></p>
+            
             </section>
                 <p>I met a poet from another state, A zealot full of fluid inspiration, Who in the name of fluid inspiration, But in the best style of bad salesmanship, Angrily tried to make me write a protest (In verse I think) against the Volstead Act. He didn't even offer me a drink Until I asked for one to steady him. This is called having an idea to sell.</p>
                 <p>It never could have happened in New Hampshire.</p>
@@ -34,8 +31,7 @@ title: Storymap
                 <p>As for what they were up to more than fishing — Suppose they weren't behaving Puritanly, The hour had not yet struck for being good, Mankind had not yet gone on the Sabbatical. It became an explorer of the deep Not to explore too deep in others' business.</p>
                 <p>Did you but know of him, New Hampshire has One real reformer who would change the world So it would be accepted by two classes, Artists the minute they set up as artists, Before, that is, they are themselves accepted, And boys the minute they get out of college. I can't help thinking those are tests to go by.</p>
                 <p>And she has one I don't know what to call him, Who comes from Philadelphia every year With a great flock of chickens of rare breeds He wants to give the educational Advantages of growing almost wild Under the watchful eye of hawk and eagle — Dorkings because they're spoken of by Chaucer, Sussex because they're spoken of by Herrick.</p>
-                <p>She has a touch of gold. New Hampshire gold—* You may have heard of it. I had a farm Offered me not long since up Berlin way With a mine on it that was worked for gold; But not gold in commercial quantities. Just enough gold to make the engagement rings And marriage rings of those who owned the farm. What gold more innocent could one have asked for?</p>
-                <p>1 Cf. line 5, page 21, "A Star in a Stone-boat."</p>
+                <p>She has a touch of gold. <a href="#noteB">New Hampshire gold</a>— You may have heard of it. I had a farm Offered me not long since up Berlin way With a mine on it that was worked for gold; But not gold in commercial quantities. Just enough gold to make the engagement rings And marriage rings of those who owned the farm. What gold more innocent could one have asked for?</p>
             </section>
 
             <section data-place="andover">
@@ -102,8 +98,16 @@ title: Storymap
             </section>
 
             <section>
+                <ol>
+                    <li id="noteAA"> <a href="https://native-land.ca/maps/territories/abenaki-abenaquis/" target="axehelve">Map of Abenaki territory.</a></li>
+                    <li id="noteA">Cf. page 37, <a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000888807;view=1up;seq=51" target="axehelve">"The Axe-helve."</a></li>
+                    <li id="noteB">Cf. line 5, page 21, <a href="https://babel.hathitrust.org/cgi/pt?num=21&u=1&seq=20&view=image&size=100&id=uva.x000888807&q1=stumbled" target="axehelve">"A Star in a Stone-boat."</a></li>
+                </ol>
+            </section>
+
+            <section>
                 <h1>TWO WITCHES</h1>
-                <h2><span data-place="coos">I. THE WITCH OF <a href=“#note1”>COÖS</a></span></h2>
+                <h2><span data-place="coos">I. THE WITCH OF <a href="#note1">COÖS</a></span></h2>
                 <p>circa 1922</p>
                 <p><span data-place="mtwashington">I staid the night for shelter at a farm<br> Behind the mountain, with a mother and son,<br> Two old-believers. They did all the talking.</span></p> 
                 <p><i>Mother</i>. Folks think a witch who has familiar spirits<br> She could call up to pass a winter evening,<br> But won't, should be burned at the stake or something.<br> Summoning spirits isn't "Button, button,<br> Who's got the button," I would have them know.</p> 
@@ -135,7 +139,7 @@ title: Storymap
 
             <section>
                 <ol>
-                    <li id=“#note1”><p>From Koas, Abenaki for “little white pine tree.” There is still a band of Abenakis from this region who identify as the Koasek/Cowasuck.</p>
+                    <li id="note1"><p>From Koas, Abenaki for “little white pine tree.” There is still a band of Abenakis from this region who identify as the Koasek/Cowasuck.</p>
                     <p>The town history of Haverhill, NH gives a sketchy account of the origin of the name Coös, and an even sketchier account of the native peoples who named it. I would note that the historical overview of the Koasek people is riddled with errors, but is interesting for the observations that natives had cleared meadows for farming, ground corn into meal, etc.</p></li>
                 </ol>
             </section>
@@ -242,6 +246,9 @@ title: Storymap
         var views = {
             newhampshire: { lat: 44, lon: -71.5, zoom: 8 },
             south: { lat: 33, lon: -88, zoom: 5.5 },
+            arkansas: {lat: 34.8, lon: -92.2, zoom: 7 },
+            california: {lat: 37, lon: -120, zoom: 5 },
+            britisharctic: {lat: 75, lon: -90, zoom: 3},
             constantinople: { lat: 41.013611, lon: 28.955, zoom: 8 },
             sanfrancisco: { lat: 37.783333, lon: -122.416667, zoom: 8 },
             philadelphia: { lat: 39.952778, lon: -75.163611, zoom: 8 },
