deleted code for Two Witches and commented out the code for coos and grafton counties

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -104,62 +104,6 @@ title: Storymap
                     <li id="noteB">Cf. line 5, page 21, <a href="https://babel.hathitrust.org/cgi/pt?num=21&u=1&seq=20&view=image&size=100&id=uva.x000888807&q1=stumbled" target="axehelve">"A Star in a Stone-boat."</a></li>
                 </ol>
             </section>
-
-            <section>
-                <h1>TWO WITCHES</h1>
-                <h2><span data-place="coos">I. THE WITCH OF <a href="#note1">COÖS</a></span></h2>
-                <p>circa 1922</p>
-                <p><span data-place="mtwashington">I staid the night for shelter at a farm<br> Behind the mountain, with a mother and son,<br> Two old-believers. They did all the talking.</span></p> 
-                <p><i>Mother</i>. Folks think a witch who has familiar spirits<br> She could call up to pass a winter evening,<br> But won't, should be burned at the stake or something.<br> Summoning spirits isn't "Button, button,<br> Who's got the button," I would have them know.</p> 
-                <p><i>Son</i>. Mother can make a common table rear<br> And kick with two legs like an army mule.</p> 
-                <p><i>Mother</i>. And when I've done it, what good have I<br> done?<br> Rather than tip a table for you, let me<br> Tell you what Ralle the Sioux Control once told me.<br> He said the dead had souls, but when I asked him<br> How could that be — I thought the dead were souls,<br> He broke my trance. Don't that make you suspicious<br> That there's something the dead are keeping back?<br> Yes, there's something the dead are keeping back.</p> 
-                <p><i>Son</i>. You wouldn't want to tell him what we have<br> Up attic, mother?</p>
-                <p><i>Mother</i>. Bones — a skeleton.</p>
-            </section>
-
-            <section data-place="coos">
-                <p>Son. But the headboard of mother's bed is pushed Against the attic door: the door is nailed. It's harmless. Mother hears it in the night Halting perplexed behind the barrier Of door and headboard. Where it wants to get Is back into the cellar where it came from. Mother. We'll never let them, will we, son? We'll never! Son. It left the cellar forty years ago And carried itself like a pile of dishes Up one flight from the cellar to the kitchen, Another from the kitchen to the bedroom, Another from the bedroom to the attic, Right past both father and mother, and neither stopped it. Father had gone upstairs; mother was downstairs. I was a baby: I don't know where I was. Mother. The only fault my husband found with me — I went to sleep before I went to bed, Especially in winter when the bed Might just as well be ice and the clothes snow. The night the bones came up the cellar-stairs Toffile had gone to bed alone and left me, But left an open door to cool the room off So as to sort of turn me out of it. I was just coming to myself enough To wonder where the cold was coming from, When I heard Toffile upstairs in the bedroom And thought I heard him downstairs in the cellar.</p>
-            </section>
-
-            <section data-place="coos">
-                <p>The board we had laid down to walk dry-shod on When there was water in the cellar in spring Struck the hard cellar bottom. And then someone Began the stairs, two footsteps for each step, The way a man with one leg and a crutch, Or a little child, comes up. It wasn't Toffile: It wasn't anyone who could be there. The bulkhead double-doors were double-locked And swollen tight and buried under snow. The cellar windows were banked up with sawdust And swollen tight and buried under snow. It was the bones. I knew them — and good reason. My first impulse was to get to the knob And hold the door. But the bones didn't try The door; they halted helpless on the landing, Waiting for things to happen in their favor. The faintest restless rustling ran all through them. I never could have done the thing I did If the wish hadn't been too strong in me To see how they were mounted for this walk. I had a vision of them put together Not like a man, but like a chandelier. So suddenly I flung the door wide on him. A moment he stood balancing with emotion, And all but lost himself. (A tongue of fire Flashed out and licked along his upper teeth. Smoke rolled inside the sockets of his eyes.) Then he came at me with one hand outstretched, The way he did in life once; but this time I struck the hand off brittle on the floor, And fell back from him on the floor myself. The finger-pieces slid in all directions. (Where did I see one of those pieces lately?</p>
-            </section>
-
-            <section data-place="coos">
-                <p>Hand me my button-box — it must be there.) I sat up on the floor and shouted, "Toffile, It's coming up to you." It had its choice Of the door to the cellar or the hall. It took the hall door for the novelty, And set off briskly for so slow a thing, Still going every which way in the joints, though, So that it looked like lightning or a scribble, From the slap I had just now given its hand. I listened till it almost climbed the stairs From the hall to the only finished bedroom, Before I got up to do anything; Then ran and shouted, "Shut the bedroom door, Toffile, for my sake!" "Company," he said, "Don't make me get up; I'm too warm in bed." So lying forward weakly on the handrail I pushed myself upstairs, and in the light (The kitchen had been dark) I had to own I could see nothing. "Toffile, I don't see it. It's with us in the room though. It's the bones." "What bones?" "The cellar bones — out of the grave." That made him throw his bare legs out of bed And sit up by me and take hold of me. I wanted to put out the light and see If I could see it, or else mow the room, With our arms at the level of our knees, And bring the chalk-pile down. "I'll tell you what — It's looking for another door to try. The uncommonly deep snow has made him think Of his old song, The Wild Colonial Boy, He always used to sing along the tote-road. He's after an open door to get out-doors.</p>
-            </section>
-
-            <section data-place="coos">
-                <p>Let's trap him with an open door up attic." Toffile agreed to that, and sure enough, Almost the moment he was given an opening, The steps began to climb the attic stairs. I heard them. Toffile didn't seem to hear them. "Quick! " I slammed to the door and held the knob. "Toffile, get nails." I made him nail the door shut, And push the headboard of the bed against it. Then we asked was there anything Up attic that we'd ever want again. The attic was less to us than the cellar. If the bones liked the attic, let them have it, Let them stay in the attic. When they sometimes Come down the stairs at night and stand perplexed Behind the door and headboard of the bed, Brushing their chalky skull with chalky fingers, With sounds like the dry rattling of a shutter, That's what I sit up in the dark to say — To no one any more since Toffile died. Let them stay in the attic since they went there. I promised Toffile to be cruel to them For helping them be cruel once to him. Son. We think they had a grave down in the cellar. Mother. We know they had a grave down in the cellar. Son. We never could find out whose bones they were. Mother. Yes, we could too, son. Tell the truth for once. They were a man's his father killed for me. I mean a man he killed instead of me. The least I could do was to help dig their grave.</p>
-            </section>
-
-            <section data-place="coos">
-                <p>We were about it one night in the cellar. Son knows the story: but 'twas not for him To tell the truth, suppose the time had come. Son looks surprised to see me end a lie We'd kept all these years between ourselves So as to have it ready for outsiders. But tonight I don't care enough to lie — I don't remember why I ever cared. Toffile, if he were here, I don't believe Could tell you why he ever cared himself . . . She hadn't found the finger-bone she wanted Among the buttons poured out in her lap. I verified the name next morning: Toffile. The rural letter-box said Toffile Lajway.</p>
-            </section>
-
-            <section>
-                <ol>
-                    <li id="note1"><p>From Koas, Abenaki for “little white pine tree.” There is still a band of Abenakis from this region who identify as the Koasek/Cowasuck.</p>
-                    <p>The town history of Haverhill, NH gives a sketchy account of the origin of the name Coös, and an even sketchier account of the native peoples who named it. I would note that the historical overview of the Koasek people is riddled with errors, but is interesting for the observations that natives had cleared meadows for farming, ground corn into meal, etc.</p></li>
-                </ol>
-            </section>
-
-            <section>
-                <h1><span data-place="grafton">II. THE PAUPER WITCH OF GRAFTON</span></h1>
-                <p>Now that they've got it settled whose I be, I'm going to tell them something they won't like: They've got it settled wrong, and I can prove it. Flattered I must be to have two towns fighting To make a present of me to each other. They don't dispose me, either one of them, To spare them any trouble. Double trouble's Always the witch's motto anyway. I'll double theirs for both of them — you watch me. They'll find they've got the whole thing to do over, That is, if facts is what they want to go by. <span data-place="warren">They set a lot (now don't they?) by a record Of Arthur Amy's having once been up For Hog Reeve in March Meeting here in Warren.</span></p>
-            </section>
-
-            <section data-place="wentworth">
-                <p>I could have told them any time this twelvemonth The Arthur Amy I was married to Couldn't have been the one they say was up In Warren at March Meeting for the reason He wa'n't but fifteen at the time they say. The Arthur Amy I was married to Voted the only times he ever voted, Which wasn't many, in the town of Wentworth. One of the times was when 'twas in the warrant To see if the town wanted to take over The tote road to our clearing where we lived. I'll tell you who'd remember — Heman Lapish. Their Arthur Amy was the father of mine. So now they've dragged it through the law courts once I guess they'd better drag it through again. Wentworth and Warren's both good towns to live in, Only I happen to prefer to live In Wentworth from now on; and when all's said, Right's right, and the temptation to do right When I can hurt someone by doing it Has always been too much for me, it has. I know of some folks that'd be set up At having in their town a noted witch: But most would have to think of the expense That even I would be. They ought to know That as a witch I'd often milk a bat And that'd be enough to last for days. It'd make my position stronger, think, If I was to consent to give some sign To make it surer that I was a witch? It wa'n't no sign, I s'pose, when Mallice Huse Said that I took him out in his old age And rode all over everything on him</p>
-            </section>
-
-            <section data-place="grafton">
-                <p>Until I'd had him worn to skin and bones. And if I'd left him hitched unblanketed In front of one Town Hall, I'd left him hitched In front of every one in Grafton County. Some cried shame on me not to blanket him, The poor old man. It would have been all right If some one hadn't said to gnaw the posts He stood beside and leave his trade mark on them, So they could recognize them. Not a post That they could hear tell of was scarified. They made him keep on gnawing till he whined. Then that same smarty someone said to look — He'd bet Huse was a cribber and had gnawed The crib he slept in — and as sure's you're born They found he'd gnawed the four posts of his bed, All four of them to splinters. What did that prove? Not that he hadn't gnawed the hitching posts He said he had besides. Because a horse Gnaws in the stable ain't no proof to me He don't gnaw trees and posts and fences too. But everybody took it for a proof. I was a strapping girl of twenty then. The smarty someone who spoiled everything Was Arthur Amy. You know who he was. That was the way he started courting me. He never said much after we were married, But I mistrusted he was none too proud Of having interfered in the Huse business. I guess he found he got more out of me By having me a witch. Or something happened To turn him round. He got to saying things To undo what he'd done and make it right, Like, "No, she ain't come back from kiting yet.</p>
-            </section>
-
-            <section data-place="moosilauke">
-                <p>Last night was one of her nights out. She's kiting. She thinks when the wind makes a night of it She might as well herself." But he liked best To let on he was plagued to death with me: If anyone had seen me coming home Over the ridgepole,'stride of a broomstick, As often as he had in the tail of the night, He guessed they'd know what he had to put up with. Well, I showed Arthur Amy signs enough Off from the house as far as we could keep And from barn smells you can't wash out of ploughed ground With all the rain and snow of seven years; And I don't mean just skulls of Roger's Rangers On Moosilauke, but woman signs to man, Only bewitched so I would last him longer. Up where the trees grow short, the mosses tall, I made him gather me wet snow berries On slippery rocks beside a waterfall. I made him do it for me in the dark. And he liked everything I made him do. I hope if he is where he sees me now He's so far off he can't see what I've come to. You can come down from everything to nothing. All is, if I'd a-known when I was young And full of it, that this would be the end, It doesn't seem as if I'd had the courage To make so free and kick up in folks' faces. I might have, but it doesn't seem as if.</p>
-            </section>
  
     </div>
     <div id="map" class=".col-md-4 storymap-sidebar">
@@ -167,7 +111,7 @@ title: Storymap
 </div>
 
 <script type="text/javascript" src="/demos/assets/js/storymap/storymap.js"></script>
-<script type="text/javascript" src="/demos/assets/js/storymap/counties.js"></script>
+<!-- <script type="text/javascript" src="/demos/assets/js/storymap/counties.js"></script> -->
 <script type="text/javascript">
     (function () {
         'use strict';
@@ -231,16 +175,9 @@ title: Storymap
             L.marker([44.280278, -71.688056]).bindTooltip("Bethlehem, NH"),
             L.marker([46.5, 9.316667]).bindTooltip("Alps"),
             L.marker([56.564341, -3.584886]).bindTooltip("Birnam Wood"),
-            L.marker([44.69, -71.3]).bindTooltip("Koas/Coös County"),
-            L.marker([44.034167, -72.063889]).bindTooltip("Haverhill, NH"),
-            L.marker([44.103953, -72.121759]).bindTooltip("Newbury,VT"),
-            L.marker([44.2705, -71.30325]).bindTooltip("Gôdagwajo/Mt. Washington"),
-            L.marker([43.436667, -71.648611]).bindTooltip("Bemijesoak/Pemigewasset River"),
-            L.marker([43.93, -71.84]).bindTooltip("Grafton County"),
             L.marker([43.924722, -71.891667]).bindTooltip("Warren, NH"),
-            L.marker([43.868889, -71.91]).bindTooltip("Wentworth, NH"),
             L.marker([44.024511, -71.830917]).bindTooltip("Mozalhlaki/Mt. Moosilauke"),
-            L.geoJSON(counties)
+            /*L.geoJSON(counties)*/
         ];
 
         var views = {
@@ -260,11 +197,6 @@ title: Storymap
             warren: { lat: 43.924722, lon: -71.891667, zoom: 11 },
             moosilauke: { lat: 44.024511, lon: -71.830917, zoom: 11 },
             birnam: { lat: 56.564341, lon: -3.584886, zoom: 12 },
-            coos: { lat: 44.69, lon: -71.3, zoom: 9 },
-            mtwashington: { lat: 44.2705, lon: -71.30325, zoom: 13 },
-            grafton: { lat: 43.93, lon: -71.84, zoom: 9},
-            wentworth: { lat: 43.868889, lon: -71.91, zoom: 11 },
-            grafton: { lat: 43.93, lon: -71.84, zoom: 9 },
         };
 
         $('.storymap-main').storymap({ markers: views, paths: paths });
