--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@ title: "Unclosure."
 <div class="introduction">
   <h1></h1>
 
-<p><img src="images/nhfence.jpg"
-  alt="Woodcut by JJ Lankers in the 1923 edition" align="left"></p>
+<p><img src="images/unlock.png"
+   align="left"></p>
+
+   <p>On January 1, 2019, material published in the United States in 1923 <a href="https://law.duke.edu/cspd/publicdomainday/2019/">entered the public domain</a> after a twenty-year delay due to the extension of copyright terms by Congress. Among the many works of art, film, literature, and music from 1923 newly released into the public domain is Robert Frost’s <a href="https://babel.hathitrust.org/cgi/pt?id=uc1.32106002108873;view=2up;seq=1"><em>New Hampshire</em></a>, the collection of poetry that won him a Pulitzer Prize the following year.</p>
+
+<p>Using <em>New Hampshire</em> as our raw material, <em>Unclosure</em> seeks to explore the possibilities that the public domain holds for research, pedagogy, and play. On this website, you can view a series of projects based on material from <em>New Hampshire</em>, each accompanied by a tutorial that will walk you through the copyright rules and digital tools you would need to replicate or remix the project on your own. As we believe that the cultural commons should be protected and expanded, we hope this exploration will empower scholars, teachers, and members of the general public to engage the variety of public-domain material now widely available online.</p>
 </div>
 
-<div class="toc">
-  <h2></h2>
-  <ul style="padding-left: 400px; padding-top: 75px" class="texts">
-  {% for item in site.texts %}
 
-    <li class="text-title">
-      <a href="{{ site.baseurl }}{{ item.url }}">
-        {{ item.title }}
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
-</div>
 
 
