--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -147,7 +147,7 @@ storymap: true
             L.marker([44.894444, -71.495833]).bindTooltip("Colebrook, NH"),
             L.marker([42.358056, -71.063611]).bindTooltip("Boston, MA"),
             L.marker([40.777453, -73.975903]).bindTooltip("American Society for Physical Research"),
-            L.marker([42.374, -71.117]).bindTooltip("Harvard College"),
+            L.marker([42.374, -71.117]).bindTooltip("Harvard University"),
             L.marker([42.788333, -71.200833]).bindTooltip("Salem, NH"),
             L.marker([40, -100]).bindTooltip("'The Union'"),
             L.marker([44, -72.7]).bindTooltip("Vermont"),
