changed titles of storymap and tutorial

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -1,12 +1,12 @@
 ---
 layout: narrative
-title: StoryMap
+title: Mapping Robert Frost's </br>"New Hampshire" (1923)
 storymap: true
+cat: StoryMap
 ---
 
 <div class="container-fluid">
     <div class="storymap-main">
-            <h1>Robert Frost's <i>New Hampshire</i> (1923)</h1>
 
             <section>
                 <p><span data-place="south">I met a lady from the South who said </br>(You won't believe she said it, but she said it): </br>"None of my family ever worked, or had </br>A thing to sell." I don't suppose the work </br>Much matters. You may work for all of me. </br>I've seen the time I've had to work myself. </br><a href="#noteA">The having anything to sell is what </br>Is the disgrace in man or state or nation.</a></span></p>
@@ -87,8 +87,8 @@ storymap: true
                 <p>He stood on the safe side of the line talking; </br>Which is sheer Matthew Arnoldism, </br>The cult of one who owned himself "a foiled, </br>Circuitous wanderer," and "took dejectedly </br>His seat upon the intellectual throne." </br>Agreed in frowning on these improvised </br>Altars the woods are full of nowadays, </br>Again as in the days when Ahaz sinned </br>By worship under green trees in the open. </br>Scarcely a mile but that I come on one, </br>A black-cheeked stone and stick of rain-washed charcoal. </br>Even to say the groves were God's first temples </br>Comes too near to Ahaz' sin for safety. </br>Nothing not built with hands of course is sacred. </br>But here is not a question of what's sacred; </br>Rather of what to face or run away from. </br>I'd hate to be a runaway from nature. </br>And neither would I choose to be a puke </br>Who cares not what he does in company, </br>And, when he can't do anything, falls back </br>On words, and tries his worst to make words speak </br>Louder than actions, and sometimes achieves it. </br>It seems a narrow choice the age insists on. </br>How about being a good Greek, for instance? </br>That course, they tell me, isn't offered this year. </br>"Come, but this isn't choosing — puke or prude?" </br>Well, if I have to choose one or the other, </br>I choose to be a plain New Hampshire farmer </br>With an income in cash of say a thousand </br>(From say a publisher in New York City). </br>It's restful to arrive at a decision, </br>And restful just to think about New Hampshire. </br>At present I am living in Vermont.</p>
             </section>
 
-            <section>
-                <ol>
+            <section style="display: none;">
+                    <ol>
                     <li id="noteA"><a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000888807;view=1up;seq=51" target="axehelve">"The Axe-helve,"</a> page 37.</li>
                     <li id="noteB"><a href="https://babel.hathitrust.org/cgi/pt?num=21&u=1&seq=20&view=image&size=100&id=uva.x000888807&q1=stumbled" target="axehelve">"A Star in a Stone-boat,"</a> page 21, line 5.</li>
                     <li id="noteC"><a href="https://babel.hathitrust.org/cgi/pt?num=56&u=1&seq=70&view=image&size=100&id=uva.x000888807&q1=witch" target="axehelve">"The Witch of Coös,"</a> page 56.</li>
