made changes to the Why NH section of the About page

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -131,7 +131,7 @@ cat: StoryMap
             L.marker([37, -120]).bindTooltip("California"),
             L.marker([75, -90]).bindTooltip("British Arctic"),
             L.marker([44, -71.5]).bindTooltip("New Hampshire"),
-            L.marker([41.013611, 28.955]).bindTooltip("Constantinople/Istanbul"),
+            L.marker([41.013611, 28.955]).bindTooltip("Constantinople"),
             L.marker([44.808889, -71.869444]).bindTooltip("Brighton, VT"),
             L.marker([37.783333, -122.416667]).bindTooltip("San Francisco, CA"),
             L.marker([43.703333, -72.288333]).bindTooltip("Dartmouth College"),
