added opening paragraph to storymap

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -5,9 +5,14 @@ storymap: true
 cat: StoryMap
 ---
 
+"New Hampshire" is the title poem from Robert Frost's collection of poetry <i>New Hampshire: A Poem with Notes and Grace Notes</i> (1923). We might assume that Frost only mentiones places within the state of New Hampshire, but this storymap reveals that Frost used places from around the world in order to help him create an imagined geography of New Hampshire.<br><br>
+
+The easiest way to read the storymap is to scroll through the poem using the down arrow while the map spans locations. Mouse over the blue text to see Frost's in-text citations (that link to the "note" or "grace note" originally referenced) or green text to see examples of annotatations (many more of which could be added to this poem).
+
+
 <div class="container-fluid">
     <div class="storymap-main">
-        <h1><span data-place="newhampshire">"New Hampshire" from <i>New Hampshire: A Poem with Notes and Gracenotes</i> (1923)</span></h1>
+        <h1><span data-place="newhampshire">"New Hampshire"</span></h1>
         <h2>by Robert Frost</h2>
 
             <section>
@@ -185,6 +190,7 @@ cat: StoryMap
         ];
 
         var views = {
+            world: { lat: 44, lon: -71.5, zoom: 2 },
             newhampshire: { lat: 44, lon: -71.5, zoom: 8 },
             south: { lat: 33, lon: -88, zoom: 5.5 },
             arkansas: { lat: 34.8, lon: -92.2, zoom: 7 },
