fixed typos in About page and storymap

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -7,7 +7,7 @@ cat: StoryMap
 
 "New Hampshire" is the title poem from Robert Frost's collection of poetry <i>New Hampshire: A Poem with Notes and Grace Notes</i> (1923). We might assume that Frost only mentiones places within the state of New Hampshire, but this storymap reveals that Frost used places from around the world in order to help him create an imagined geography of New Hampshire.<br><br>
 
-The easiest way to read the storymap is to scroll through the poem using the down arrow while the map spans locations. Mouse over the blue text to see Frost's in-text citations (that link to the "note" or "grace note" originally referenced) or green text to see examples of annotatations (many more of which could be added to this poem).
+The easiest way to read the storymap is to scroll through the poem using the down arrow while the map spans locations. Mouse over the blue text to see Frost's footnotes (that link to the poem or "note" originally referenced) or green text to see examples of annotatations (many more of which could be added to this poem).
 
 
 <div class="container-fluid">
